# LAKworks

./: CMakeLists.txt  README.md
common/: camera.cpp  camera.h  collider.cpp  collider.h  gameobject.cpp  gameobject.h  light.cpp  light.h  objloader.cpp  objloader.hpp  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
demo/: demo.cpp  scene1.cpp  scene1.h  scene2.cpp  scene2.h
demo/shaders/: sprite.frag  sprite.vert  sprite_2.frag  sprite_2.vert
